# Quaternion

./: .gitignore  Cargo.toml  README.md
driver/: Cargo.toml
driver/src/: main.rs  sim.rs
driver/src/sim/: backfire.rs  bencher.rs  cheese.rs  sandbox.rs  state.rs  stats.rs
quaternion/: Cargo.toml
quaternion/src/: eval.rs  game.rs  gen.rs  lib.rs  tree.rs  worker.rs
quaternion/src/game/: advance.rs  eval.rs  gen.rs  movegen.rs  sim.rs
quaternion/src/game/advance/: tests.rs
quaternion/src/game/eval/: tests.rs
quaternion/src/game/movegen/: tests.rs
quaternion/tests/: test.rs
src/: board.rs  game.rs  main-single.rs  main.rs  tree.rs  worker.rs
src/bot/: bot.rs  tree.rs  worker.rs
src/driver/: driver.rs
src/driver/sim/: backfire.rs  cheese.rs  sandbox.rs  state.rs  stats.rs
wasm/: .gitignore  Cargo.toml  build.sh  index.html  index.js  package.json  run.sh  server.js  wasm-build.sh  worker.js
wasm/pub/: index.html  script.js  worker.js
wasm/src/: lib.rs
