[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[package]
name = "multithreading-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
parking_lot = "0.12.1"
tetron = { path = "../tetron/tetron" }
