[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[package]
name = "quaternion"
version = "0.1.0"
edition = "2021"

[lib]
name = "quaternion"

[dependencies]
rand = "0.8.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wasm_thread = "0.2.0"

[dependencies.parking_lot] 
version = "0.12.1"
features = ["nightly"]

