[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[package]
name = "quaternion"
version = "0.1.0"
edition = "2021"

[lib]
name = "quaternion"

[dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.3"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3.23"
features = ['Window', 'Performance', 'PerformanceTiming']

[dependencies.parking_lot] 
version = "0.12.1"
features = ["nightly"]

