[package]
name = "wasm_driver"
version = "0.1.0"
authors = ["Shine Chang"]
edition = "2018"
rust-version = "1.56"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
rayon = "1.1.0"
wasm-bindgen = "0.2.87"
wasm_thread = "0.2.0"

quaternion = { path = "../quaternion" }

[dependencies.web-sys]
version = "0.3.23"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
