[package]
name = "wasm_driver"
version = "0.1.0"
authors = ["Shine Chang"]
edition = "2021"
rust-version = "1.72"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

quaternion = { path = "../quaternion" }

[dependencies.web-sys]
version = "0.3.23"
features = [
  'CanvasRenderingContext2d',
  'ErrorEvent',
  'Event',
  'ImageData',
  'Navigator',
  'Window',
  'Worker',
  'DedicatedWorkerGlobalScope',
  'MessageEvent',
]
